--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             transition: opacity 0.8s ease;
         }
         
-        /* القلب في البداية */
+        /* القلب في البداية (تصميم الصورة) */
         .start-heart-icon {
             font-size: 5rem; color: var(--main-red);
             filter: drop-shadow(0 0 30px var(--glow));
@@ -42,7 +42,7 @@
         @keyframes floatText { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-5px); } }
         @keyframes beat { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.1); } }
 
-        /* --- الكارت الرئيسي --- */
+        /* --- الكارت الرئيسي (تصميم الصورة 75400) --- */
         .main-card { 
             background: transparent; 
             width: 90%; max-width: 400px; text-align: center; 
@@ -66,17 +66,17 @@
 
         /* كلمات الأغنية */
         .lyrics-box {
-            min-height: 90px; margin: 20px 0; width: 100%;
+            min-height: 80px; margin: 20px 0; width: 100%;
             display: flex; align-items: center; justify-content: center;
         }
         .current-lyric {
-            font-size: 1.4rem; color: #fff; font-weight: 700; line-height: 1.6;
+            font-size: 1.3rem; color: #fff; font-weight: 700; line-height: 1.6;
             text-shadow: 0 2px 10px rgba(0,0,0,0.8);
-            transition: all 0.4s ease; opacity: 0; transform: translateY(10px); filter: blur(5px);
+            transition: all 0.5s ease; opacity: 0; transform: translateY(10px); filter: blur(5px);
         }
         .current-lyric.visible { opacity: 1; transform: translateY(0); filter: blur(0); }
 
-        /* العداد */
+        /* العداد (تصميم المربعات الرمادي) */
         .timer-container { 
             display: flex; justify-content: space-between; gap: 8px; width: 100%; margin-top: 10px; direction: ltr; 
         }
@@ -88,10 +88,10 @@
             border: 1px solid #333;
             display: flex; flex-direction: column; justify-content: center; align-items: center;
         }
-        .t-num { font-size: 1.6rem; font-weight: bold; color: #81ecec; margin-bottom: 5px; } 
+        .t-num { font-size: 1.6rem; font-weight: bold; color: #81ecec; margin-bottom: 5px; } /* لون أرقام سماوي فاتح */
         .t-label { font-size: 0.8rem; color: #aaa; font-family: 'Cairo', sans-serif; }
 
-        /* زر المشاركة */
+        /* زر المشاركة (مخفي ويظهر بالضغط مرتين على القلب) */
         #secretQR { 
             display: none; margin-top: 25px; 
             background: white; padding: 15px; border-radius: 15px; 
@@ -133,28 +133,27 @@
     </div>
 
     <script>
-        // --- إعدادات الأغنية (بعيد الحب - حقروص) ---
-        // البداية: تخطي المقدمة الموسيقية (تقريباً 13 ثانية)
-        // النهاية: بعد جملة "اذا مريت من جنبي" (تقريباً دقيقة و 4 ثواني)
-        const startSec = 13.0; 
+        // --- إعدادات الأغنية (عيد الحب - حقروص) ---
+        // البداية: 14 ثانية (عند جملة بعيد الحب)
+        // النهاية: 64 ثانية (بعد جملة اذا مريت من جنبي فوراً)
+        const startSec = 14.0; 
         const endSec = 64.0; 
 
-        // --- كلمات الأغنية (المقطع المطلوب) ---
+        // --- كلمات الأغنية ---
         const lyrics = [
-            { time: 13.5, text: "بعيد الحب أبكتب لك .." },
-            { time: 15.5, text: "واسمعك الذي فاتك .." },
-            { time: 17.5, text: "وأتكلم وأشرح لك .." },
-            { time: 20.0, text: "حكاية عاشها قلبي .." },
-            { time: 22.5, text: "وانا صغير أناظر لك .." },
-            { time: 25.5, text: "وأتابع كل خطواتك .." },
-            { time: 30.0, text: "وانت تبتسم لي .." },
-            { time: 34.0, text: "ولا تدري مدى حبي .." },
-            { time: 38.0, text: "وكنت اتعمد النظرة .." },
-            { time: 42.0, text: "عشان احظى بنظراتك .." },
-            { time: 47.0, text: "واتشقق من الفرحة .." },
-            { time: 51.0, text: "اذا مريت من جنبي .." },
-            { time: 54.0, text: "واتشقق من الفرحة .." }, // تكرار للكورس في الأغنية
-            { time: 58.0, text: "اذا مريت من جنبي .." }
+            { time: 14.5, text: "بعيد الحب أبكتب لك .." },
+            { time: 17.0, text: "واسمعك الذي فاتك .." },
+            { time: 20.5, text: "وأتكلم وأشرح لك .." },
+            { time: 24.5, text: "حكاية عاشها قلبي .." },
+            { time: 28.5, text: "وانا صغير أناظر لك .." },
+            { time: 32.5, text: "وأتابع كل خطواتك .." },
+            { time: 36.5, text: "وانت تبتسم لي .." },
+            { time: 40.5, text: "ولا تدري مدى حبي .." },
+            { time: 44.5, text: "وكنت اتعمد النظرة .." },
+            { time: 48.5, text: "عشان احظى بنظراتك .." },
+            { time: 52.5, text: "واتشقق من الفرحة .." },
+            { time: 56.5, text: "اذا مريت من جنبي .." },
+            { time: 60.5, text: "اذا مريت من جنبي .." }
         ];
 
         var player;
@@ -162,7 +161,7 @@
         var firstScriptTag = document.getElementsByTagName('script')[0]; firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
         function onYouTubeIframeAPIReady() {
-            // كود الفيديو الرسمي (pXava1lGms4)
+            // كود الفيديو الجديد (pXava1lGms4)
             player = new YT.Player('youtube-player', { videoId: 'pXava1lGms4', playerVars: { 'autoplay': 0, 'controls': 0, 'playsinline': 1 }, events: { 'onStateChange': onPlayerStateChange } });
         }
         function onPlayerStateChange(event) {
@@ -174,7 +173,7 @@
             if (!player || !player.getCurrentTime) return;
             let ct = player.getCurrentTime();
             
-            // Loop Logic: لما يوصل للنهاية يرجع للبداية المحددة
+            // Loop: لما يوصل للنهاية يرجع للبداية المحددة
             if (ct >= endSec) player.seekTo(startSec);
 
             let currentText = "";
@@ -191,7 +190,7 @@
                 setTimeout(() => { 
                     lyricDiv.innerText = currentText; 
                     lyricDiv.classList.add('visible'); 
-                }, 100); 
+                }, 150); 
             }
             if (player.getPlayerState() === YT.PlayerState.PLAYING) requestAnimationFrame(checkTimeAndLyrics);
         }
@@ -225,6 +224,7 @@
             else { 
                 qrBox.style.display = 'block'; 
                 qrBox.innerHTML = ''; 
+                // وضع الرابط في منتصف الـ QR
                 new QRCode(qrBox, {text: window.location.href, width: 120, height: 120, colorDark : "#000000", colorLight : "#ffffff"}); 
             }
         }
