--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
         .heart-letter-r {
             position: absolute;
             top: 50%; left: 50%;
-            transform: translate(-50%, -50%);
-            margin-top: 0.1em; 
+            /* تم رفع الحرف للأعلى قليلاً ليتوسط القلب تماماً */
+            transform: translate(-50%, -65%); 
+            margin-top: 0; 
             color: black;
             font-size: 2.8rem;
             font-weight: 900;
@@ -164,7 +165,7 @@
     </div>
 
     <script>
-        const startSec = 13.0; 
+        const startSec = 13.4; 
         const endSec = 58.0; 
 
         const lyrics = [
