--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             { time: 59.0, text: "ب مدي حبي" },
             { time: 64.0, text: "و كنت اتعمد النظره عشان احظي" },
             { time: 69.0, text: "بنظراتك واتشقق من الفرحه" },
-            { time: 74.0, text: "اذا مريت من جنبي" },
-            { time: 79.0, text: "LOVE YOU FOREVER\n" }
+            { time: 74.0, text: "اذا مريت من جنبيييييي" },
+            { time: 79.0, text: "LOVE YOU RORTY\n FOREVER♥️🫂" }
         ];
 
         var player;
